...
        android:paddingBottom="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/ui_bt_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/empty_description"
...
            android:tint="@color/accent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_36" />

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_neo_action_title"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ui_home_action_button_1"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_button_rounded_white_f6"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ui_tv_title0">

                    <TextView
                        android:id="@+id/ui_tv_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/home_neo_action_title1"
...
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_home_arrow_show" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ui_home_action_button_2"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_rounded_white_f6"
                app:layout_constraintBottom_toBottomOf="parent"
...
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ui_home_action_button_3"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_button_rounded_white_f6"
                    app:layout_constraintBottom_toBottomOf="parent"
...
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_home_arrow_show" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ui_home_action_button_4"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_rounded_white_f6"
                app:layout_constraintBottom_toBottomOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home_arrow_show" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ui_home_action_button_5"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_rounded_white_f6"
                app:layout_constraintBottom_toBottomOf="parent"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_home_arrow_show" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ui_home_action_button_6"
                android:layout_width="match_parent"
                android:layout_height="76dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button_rounded_white_f6"
                app:layout_constraintBottom_toBottomOf="parent"
...
